new update- add payment and deleted other .css

--- a/connect.html
+++ b/connect.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Контакты</title>
-        <link rel="stylesheet" href="connect_style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header> 
@@ -26,7 +26,7 @@
         </ul>
       </li>
       <li><a href="#order">Оформление заказа</a></li>
-            <li><a href="#delivery">Оплата и доставка</a></li>
+            <li><a href="payment.html">Оплата и доставка</a></li>
      <li><a href=#connection.html>Контакты</a></li>
     </ul>
   <div class="writeus">
