--- a/index.html
+++ b/index.html
@@ -31,6 +31,39 @@
             <li><a href="payment.html">Оплата и доставка</a></li>
      <li><a href="connect.html">Контакты</a></li>
     </ul>
+    
+    <div class="slidershow middle">
+        <div class="slides">
+           <input type="radio" name="r" id="r1" checked>
+           <input type="radio" name="r" id="r2">
+           <input type="radio" name="r" id="r3">
+           <input type="radio" name="r" id="r4">
+           <input type="radio" name="r" id="r5">
+            <div class="slide s1">
+                <img src="img/first.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="img/second.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="img/third.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="img/fourth.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="img/five.jpg" alt="">
+            </div>
+        </div>
+        <div class="navigation">
+            <label for="r1" class="bar"></label>
+            <label for="r2" class="bar"></label>
+            <label for="r3" class="bar"></label>
+            <label for="r4" class="bar"></label>
+            <label for="r5" class="bar"></label>
+            
+        </div>
+    </div>
     <div class="copyright">
     <p class="copyright"> (c) hidokei 2013-2019</p>
 </div>
